feat: add documentation to create opening
